Linked main activity to players setup activity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">World of Drinkraft</string>
     <string name="player_setup_label">Players setup</string>
+    <string name="main_button_players">Set Players</string>
 </resources>
