--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,7 @@
     <string name="player_setup_randomize_roles">Randomize Roles</string>
     <string name="role_list_label">Roles</string>
     <string name="main_button_roles">See roles</string>
+    <string name="role_watch_label">Role specifications</string>
+    <string name="unique_role_text">This role plays unique</string>
+    <string name="in_group_role_text">This role plays in group</string>
 </resources>
