--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="role_watch_label">Role specifications</string>
     <string name="unique_role_text">This role plays unique</string>
     <string name="in_group_role_text">This role plays in group</string>
+    <string name="freepik_attribution_text">(Icon credit) Birthday vector created by rawpixel.com - fr.freepik.com</string>
 </resources>
