Added useless activity Gamemode selection

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
     <string name="app_name">DrinkQuest</string>
     <string name="player_setup_label">Players setup</string>
+    <string name="gamemode_selection_label">Gamemode selection</string>
     <string name="player_setup_name_hint">Player Name</string>
     <string name="main_button_players">Set Players</string>
     <string name="player_setup_add_player">Add Player</string>
