--- a/app/src/main/res/values-fr-rFR/strings.xml
+++ b/app/src/main/res/values-fr-rFR/strings.xml
@@ -14,4 +14,5 @@
     <string name="in_group_role_text">Ce rôle se joue en groupe</string>
     <string name="freepik_attribution_text">(Icon credit) Birthday vector created by rawpixel.com - fr.freepik.com</string>
     <string name="main_button_gamemode_selection">Mode de jeu</string>
+    <string name="player_setup_drinker_checkbox">boit: </string>
 </resources>
