--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
     <string name="in_group_role_text">This role plays in group</string>
     <string name="freepik_attribution_text">(Icon credit) Birthday vector created by rawpixel.com - fr.freepik.com</string>
     <string name="main_button_gamemode_selection">Gamemode</string>
+    <string name="player_setup_drinker_checkbox">drinks: </string>
 </resources>
